[buld-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "analytica"
version = "0.0.1"
description = "A simple Python package for analytics and investing tools"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["analytics", "investing", "finance"]
authors = [{name = "Meek Msaki"}, {email = "meek.dev3@gmail.com"}]
classifiers = [
    "Development Status :: 1 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
maintainers = [
    {name = "Meek Msaki", email= "meek.dev3@gmail.com"},
    ]

[project.scripts]
analytica = "analytica.__main__:main"
present = "analytica.present:main"
future = "analytica.future:main"