[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "timevalue"
version = "0.0.1"
description = "A simple Python package for financial valuation"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["analytics", "investing", "finance"]
authors = [{name = "Meek Msaki", email = "meek.dev3@gmail.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
maintainers = [
    {name = "Meek Msaki", email= "meek.dev3@gmail.com"},
    ]

[project.scripts]
timevalue = "timevalue.__main__:main"
present = "timevalue.present:main"
future = "timevalue.future:main"
annuity = "timevalue.annuity:main"

[project.urls]
"Homepage" = "https://github.com/mmsaki/timevalue"
"Bug Tracker" = "https://github.com/mmsaki/timevalue/issues"