[build-system]
requires = ["setuptools", "setuptools_scm", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"
dev_template= "{tag}.beta{ccount}"
dirty_template = "{tag}.alpha{ccount}+dirty"
starting_version = "v0.0.2"
branch_formatter= "util:format_branch_name"
tag_formatter = "util:format_tag_name"

[project]
name = "timevalue"
dynamic = ["version"]
description = "A simple Python package for financial valuation"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["analytics", "investing", "finance"]
authors = [{name = "Meek Msaki", email = "meek.dev3@gmail.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
maintainers = [
    {name = "Meek Msaki", email= "meek.dev3@gmail.com"},
]


[project.scripts]
present = "timevalue.present:main"
future = "timevalue.future:main"
annuity = "timevalue.annuity:main"

[project.urls]
"Homepage" = "https://github.com/mmsaki/timevalue"
"Bug Tracker" = "https://github.com/mmsaki/timevalue/issues"